Fix overflow: hidden bug

--- a/src/pages/playground/styles.module.css
+++ b/src/pages/playground/styles.module.css
@@ -51,7 +51,6 @@
 }
 
 .editorWrapper {
-	overflow: hidden;
 	display: inline-block;
 	height: 100%;
 	width: 50%;
